cms images added and cleanup

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="hero-visual">
           <a href="#media" aria-label="Widok mapy - media"><img src="assets/map_view.jpg" alt="Widok mapy" class="floating-img s1"></a>
-          <a href="#media" aria-label="Lista restauracji - media"><img src="assets/restaurant_list.jpg" alt="Lista restauracji" class="floating-img s3"></a>
+          <a href="#media" aria-label="Lista restauracji - media"><img src="assets/cms_list.png" alt="Lista restauracji" class="floating-img s1"></a>
         </div>
       </div>
     </section>
@@ -95,7 +95,17 @@
         <li>Promować swoje menu oraz swoją restaurację w aplikacji,</li>
         <li>(Wkrótce) analizować ruch gości, godziny szczytu i popularność stolików.</li>
       </ul>
-      <p class="muted">[Tu można wstawić screen z CMS – widok planu sali / dashboard z analityką]</p>
+      <p>Zapraszamy do obejrzenia aktualnych widoków cms:</p>
+      <div class="gallery">
+        <figure class="media-item">
+          <a href="assets/cms_list.png" target="_blank" rel="noopener"><img src="assets/cms_list.png" alt="Okienko cms"></a>
+          <figcaption>Okienko cms</figcaption>
+        </figure>
+        <figure class="media-item">
+          <a href="assets/cms_restaurant.png" target="_blank" rel="noopener"><img src="assets/cms_restaurant.png" alt="Plan restauracji w cms"></a>
+          <figcaption>Plan restauracji w cms</figcaption>
+        </figure>
+      </div>
     </section>
 
     <section id="benefits" class="container section reveal">
@@ -135,6 +145,20 @@
         <figure class="media-item">
           <a href="assets/restaurant_popup.jpg" target="_blank" rel="noopener"><img src="assets/restaurant_popup.jpg" alt="Okienko restauracji"></a>
           <figcaption>Popup restauracji</figcaption>
+        </figure>
+        <figure class="media-item">
+          <a href="assets/restaurant_filter.jpg" target="_blank" rel="noopener"><img src="assets/restaurant_filter.jpg" alt="Filtry restauracji"></a>
+          <figcaption>Filtry restauracji</figcaption>
+        </figure>
+      </div>
+      <div class="gallery">
+        <figure class="media-item">
+          <a href="assets/cms_list.png" target="_blank" rel="noopener"><img src="assets/cms_list.png" alt="Okienko cms"></a>
+          <figcaption>Okienko cms</figcaption>
+        </figure>
+        <figure class="media-item">
+          <a href="assets/cms_restaurant.png" target="_blank" rel="noopener"><img src="assets/cms_restaurant.png" alt="Plan restauracji w cms"></a>
+          <figcaption>Plan restauracji w cms</figcaption>
         </figure>
       </div>
     </section>
