--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="#how-it-works">Jak to działa</a>
         <a href="#pilot">Pilotaż</a>
         <a href="#media">Media</a>
+        <a href="#kontakt">Kontakt</a>
       </nav>
     </div>
   </header>
@@ -162,11 +163,33 @@
         </figure>
       </div>
     </section>
+    
+    <section id="kontakt" class="container section reveal">
+      <h2>Kontakt</h2>
+      <p>Masz pytania lub chcesz dołączyć do pilotażu? Skontaktuj się z nami:</p>
+      <div class="contact-grid">
+        <div class="contact-item">
+          <h3>Email</h3>
+          <a class="contact-link" href="mailto:tablehub@gmail.com">tablehub@gmail.com</a>
+        </div>
+        <div class="contact-item">
+          <h3>Telefon</h3>
+          <a class="contact-link" href="tel:+48123456789">+48 123 456 789</a>
+        </div>
+        <div class="contact-item">
+          <h3>Siedziba</h3>
+          <address>
+            ul. Przykładowa 12<br>
+            00-000 Miasto
+          </address>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; <span id="year"></span> MySite — running locally</p>
+      <p>&copy; <span id="year"></span> TableHub</p>
     </div>
   </footer>
 
